--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/hero.svg
   actions:
     - text: Get Started
-      link: /00-introduction/
+      link: /AZD-Templates/00-introduction/
       icon: right-arrow
       variant: primary
     - text: View on GitHub
